--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
   <title></title>
 </head>
 <body>
-  <script src="./index.ts"></script>
+  <div id="root"></div>
+  <script src="./index.tsx"></script>
 </body>
 </html>
